// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DisplayTextTask renders properly 1`] = `
<DocumentFragment>
  <div
    style="grid-area: task;"
  >
    <div
      class="sc-gtsrHT fPkqdr"
    >
      <div>
        <div
          class="sc-dlnjwi iVCkmR"
        >
          <h1>
            hello
          </h1>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Continue
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InformationScreen renders markdown properly 1`] = `
<DocumentFragment>
  <div
    class="sc-gtsrHT hMXYKS"
  >
    <div>
      <div
        class="MuiPaper-root sc-bdnxRM hDhcyW MuiPaper-elevation1 MuiPaper-rounded"
      >
        <div>
          <h1
            id="hello-world"
          >
            Hello World
          </h1>
          <ul>
            <li>
              This is some markdown
            </li>
            <li>
              that should render 
              <em>
                properly
              </em>
            </li>
          </ul>
        </div>
        <br />
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Continue 
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
